Added titles and introduction + CSS style

--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CDA 2025 for the win</title>
   </head>
-  <body>
-    <header></header>
-    <main></main>
+  <body class="homepage">
+    <header class="home-header">
+      <h1 class="home-title">Hi everybody</h1>
+    </header>
+    <main class="home-main">
+      <h2>Our broken champions:</h2>
+      <p>
+        Please give a warm welcome to everyone and give Anais a lot of money
+      </p>
+    </main>
     <footer></footer>
   </body>
 </html>
