i add the title

--- a/boubacargadio.html
+++ b/boubacargadio.html
@@ -7,6 +7,7 @@
     
 </head>
 <body>
+    <h1>Page de Boubacar</h1>
     <a href="index.html">Retour</a>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis, rerum modi adipisci quas voluptas saepe numquam. Vel reiciendis, exercitationem distinctio quam dolor vitae maiores aliquam provident earum molestias eaque dolores?</p>
 </body>
