Adds return link to index html

--- a/nicoPage.html
+++ b/nicoPage.html
@@ -5,6 +5,7 @@
     <title>Nico</title>
 </head>
 <body>
+<a href="index.html"></a>
 <h1>Bonjour et bienvenue sur ma page</h1>
 <h2>Je me présente</h2>
 <p>blablabla</p>
