add return arrow

--- a/baptiste_page.html
+++ b/baptiste_page.html
@@ -5,9 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baptiste's page</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
+    <header>
+        <nav>
+            <a href="index.html"><span class="material-symbols-outlined">
+                    chevron_left
+                </span>Retour</a>
+        </nav>
+    </header>
     <section>
         <div>
             <h1>Baptiste Martin</h1>
