Added a video to the SJ page

--- a/SJ.html
+++ b/SJ.html
@@ -32,6 +32,10 @@
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
             </p>
         </section>
+        <section>
+            <h2>Cool Videos!</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UV0mhY2Dxr0?si=E0YIOwQ13jyyOqkJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
     </main>
     <footer>
         <p>Stuff here</p>
