Added name list in index with placeholders + CSS style

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
       <p>
         Please give a warm welcome to everyone and give Anais a lot of money
       </p>
+      <ul class="champions-list">
+        <li><a>Anaïs</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+        <li><a>Prénom Nom</a></li>
+      </ul>
     </main>
     <footer></footer>
   </body>
