add back + video

--- a/page_irek.html
+++ b/page_irek.html
@@ -6,7 +6,20 @@
     <title>Irek was here</title>
 </head>
 <body>
-    <h1>Irek was here</h1>
-    <h3>test</h3>
+    <div>
+        <a href="index.html"><img src="src/back.png" alt="go_back"></a>
+
+        <h1>Factorio</h1>
+
+        <p>Great game</p>
+        
+        <div >
+            <iframe style="width: 1120px; height: 630px;"
+            src="https://www.youtube.com/embed/J8SBp4SyvLc?si=ni7cN8694BswVelq" 
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen></iframe>
+        </div>
+    </div>
 </body>
 </html>
