Add content to page and images

--- a/Mael's page.html
+++ b/Mael's page.html
@@ -6,12 +6,28 @@
     <title>Mael's page</title>
 </head>
     <body>
-        
-        <header></header>
 
-        
+        <header><h1>hey this is Mael's page</h1></header>
 
-        <footer></footer>
+        <div>
+            <h2>Here is a cute cat</h2>
+            <img src="img/cat.jpg" alt="Cat">
+            <p>Don't you think it is so cute ?</p>
+        </div>
+
+        <div>
+            <h2>Here is the video of a cute cat</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tpiyEe_CqB4?si=rIhmkNFPHZxriuWY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <p>When a Russian farmer was doing the rounds on his property, he discovered what he thought were four tiny kittens in his barn, of the like that he’d never seen before…</p>
+        </div>
+
+        <div>
+            <h2>Here story about a cute cat</h2>
+            <img src="img/Unusual Kittens Found Abandoned in Russian Barn.jpg" alt="Cat">
+            <p>Don't you love him ?</p>
+        </div>
+
+        <footer><h1>The end</h1></footer>
 
     </body>
 </html>
