added back to main page link

--- a/charly-page.html
+++ b/charly-page.html
@@ -12,6 +12,7 @@
     </div>
     <div>
         <p>Au revoir.</p>
+        <a href="index.html">partir pour de bon -></a>
     </div>
 </div>
 </body>
