--- a/baptiste_page.html
+++ b/baptiste_page.html
@@ -17,7 +17,7 @@
                 </span>Retour</a>
         </nav>
     </header>
-    <section>
+    <section id="home">
         <div>
             <h1>Baptiste Martin</h1>
             <h2>THE Elon Musk of development</h2>
@@ -26,6 +26,25 @@
             <img src="https://media.vanityfair.fr/photos/65016f3b21bffd22140d50fc/1:1/w_1238,h_1238,c_limit/elon-musk-amber-heard.jpg"
                 alt="baptiste martin" title="Baptiste Martin (le vrai)">
         </div>
+    </section>
+    <section id="description">
+        <div>
+            <p>Hello team !<br>
+                I'm proud to annonce the opening of our work in Github module in the Digital Campus In the Alps !
+                Welcome aboard
+            </p>
+        </div>
+        <div>
+            <iframe src="https://giphy.com/embed/3ohc1begniznf7LLwI" width="480" height="270" frameBorder="0"
+                class="giphy-embed" allowFullScreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/lUJpxal2Qt8?si=FsWwk9NIcngXoNV-"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
+        <script>
+            let test = "";
+        </script>
     </section>
 </body>
 
