--- a/baptiste_page.html
+++ b/baptiste_page.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <img src="https://media.vanityfair.fr/photos/65016f3b21bffd22140d50fc/1:1/w_1238,h_1238,c_limit/elon-musk-amber-heard.jpg"
-                alt="baptiste martin" title="Baptiste Martin (le vrai)">
+                alt="baptiste martin" title="Baptiste Martin (le vrai)" width="25%">
         </div>
     </section>
     <section id="description">
