--- a/cedricAtzori.html
+++ b/cedricAtzori.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nicolas Nieloux - BymyCar</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
