add css + link in index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
       <ul class="champions-list">
         <li><a>Anaïs</a></li>
-        <li><a>Prénom Nom</a></li>
+        <li><a href="baptiste_page.html" title="best page">Baptiste Martin</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
