--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <li><a href="nicoPage.html">Nico NIELOUX</a> </li>
       </ul>
     </main>
     <footer></footer>
