added link to my page and css classes in my page

--- a/charly-page.html
+++ b/charly-page.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css" />
     <title>charly's world</title>
 </head>
-<body>
+<body class="homepage">
 <div>
     <div>
-        <h1>Bienvenue sur la page de Charly</h1>
-        <h2>veuillez partir s'il vous plaît</h2>
+        <h1 class="home-title">Bienvenue sur la page de Charly</h1>
+        <h2 class="home-main">veuillez partir s'il vous plaît</h2>
     </div>
     <div>
         <p>Au revoir.</p>
-        <a href="index.html">partir pour de bon -></a>
+        <a href="index.html" class="champions-list">partir pour de bon -></a>
     </div>
 </div>
 </body>
