--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
+        <li><a href="charly-page.html">Charly CDA</a></li>
         <li><a>Prénom Nom</a></li>
       </ul>
     </main>
