--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Please give a warm welcome to everyone and give Anais a lot of money
       </p>
       <ul class="champions-list">
-        <li><a>Anaïs</a></li>
+        <li><a href="./pages/anais.html">Anaïs</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
