--- a/baptiste_page.html
+++ b/baptiste_page.html
@@ -10,25 +10,25 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
-<body>
-    <header>
+<body class="homepage">
+    <header class="home-header">
         <nav>
             <a href="index.html"><span class="material-symbols-outlined">
                     chevron_left
                 </span>Retour</a>
         </nav>
     </header>
-    <section id="home">
+    <section id="home" class="home-main">
         <div>
-            <h1>Baptiste Martin</h1>
+            <h1 class="home-title">Baptiste Martin</h1>
             <h2>THE Elon Musk of development</h2>
         </div>
-        <div>
+        <div style="width: 25%; border-radius: 100px;">
             <img src="https://media.vanityfair.fr/photos/65016f3b21bffd22140d50fc/1:1/w_1238,h_1238,c_limit/elon-musk-amber-heard.jpg"
                 alt="baptiste martin" title="Baptiste Martin (le vrai)" width="25%">
         </div>
     </section>
-    <section id="description">
+    <section id="description" class="home-main">
         <div>
             <p>Hello team !<br>
                 I'm proud to annonce the opening of our work in Github module in the Digital Campus In the Alps !
