--- a/cedricAtzori.html
+++ b/cedricAtzori.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles.css">
 
 </head>
-<body>
-<header>
-    <h1>Nicolas Nieloux chez BymyCar</h1>
+<body class="homepage">
+<header class="home-header">
+    <h1 class="home-title">Nicolas Nieloux chez BymyCar</h1>
 </header>
 
 <nav>
