--- a/ibra.html
+++ b/ibra.html
@@ -13,6 +13,9 @@
                 Le Lorem Ipsum est simplement du faux texte employé dans 
                 la composition et la mise en page avant impression
             </p>
+            <p> 
+                la composition et la mise en page avant impression
+            </p>
         </div>
         <div class="foot">
             <a href="index.html">Retour</a>
