--- a/ibra.html
+++ b/ibra.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <section class="pricipal">
         <div class="container">
             <h2>Ibrahima</h2>
-            <p>
-                Le Lorem Ipsum est simplement du faux texte employé dans 
-                la composition et la mise en page avant impression
-            </p>
-            <p> 
-                la composition et la mise en page avant impression
-            </p>
         </div>
         <div class="foot">
             <a href="index.html">Retour</a>
