--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a>Prénom Nom</a></li>
         <li><a href="nicoPage.html">Nico NIELOUX</a> </li>
         <li><a>Prénom Nom</a></li>
-        <li><a href="Mael's page.html"></a>Mael's page</a></li>
+        <li><a href="mael_page.html">>Mael's page</a></li>
       </ul>
     </main>
     <footer></footer>
