--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
       </p>
       <ul class="champions-list">
         <li><a>Anaïs</a></li>
-        <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
+        <li><a href="sebastien.html">Sébastien</a></li>
         <li><a href="charly-page.html">Charly CDA</a></li>
         <li><a>Prénom Nom</a></li>
       </ul>
