--- a/SJ.html
+++ b/SJ.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="styles.css">
     <title>SJ's Page</title>
 </head>
-<body>
-    <header>
-        <h1>Serge has a web page</h1>
+<body class="homepage">
+    <header class="home-header">
+        <h1 class="home-title">Serge has a web page</h1>
     </header>
     <main>
         <section>
@@ -36,9 +36,11 @@
             <h2>Cool Videos!</h2>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UV0mhY2Dxr0?si=E0YIOwQ13jyyOqkJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
+        <a href=""></a>
     </main>
     <footer>
-        <p>Stuff here</p>
+        <p>2024 - 2025</p>
+        <a href="index.html" class="champions-list">Home Page</a>
     </footer>
 </body>
 </html>
