--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </p>
       <ul class="champions-list">
         <li><a>Anaïs</a></li>
-        <li><a>Prénom Nom</a></li>
+        <li><a href="SJ.html">Serge Junior</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a href="page_irek.html">Irek</a></li>
