add href page-isma

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
-        <li><a>Prénom Nom</a></li>
+        <li><a href="page-isma.html">Prénom Nom</a></li>
         <li><a href="charly-page.html">Charly CDA</a></li>
         <li><a>Prénom Nom</a></li>
       </ul>
