--- a/index.html
+++ b/index.html
@@ -25,20 +25,9 @@
         <li><a>Prénom Nom</a></li>
         <li><a href="charly-page.html">Charly CDA</a></li>
         <li><a>Prénom Nom</a></li>
-
-
-
-
-
-
-
-
-
-
-
-
-
         <li><a href="nicoPage.html">Nico NIELOUX</a> </li>
+        <li><a>Prénom Nom</a></li>
+        <li><a href="mael_page.html">>Mael's page</a></li>
       </ul>
     </main>
     <footer></footer>
