--- a/baptiste_page.html
+++ b/baptiste_page.html
@@ -18,14 +18,16 @@
                 </span>Retour</a>
         </nav>
     </header>
-    <section id="home" class="home-main">
-        <div>
-            <h1 class="home-title">Baptiste Martin</h1>
-            <h2>THE Elon Musk of development</h2>
-        </div>
-        <div style="width: 25%; border-radius: 100px;">
-            <img src="https://media.vanityfair.fr/photos/65016f3b21bffd22140d50fc/1:1/w_1238,h_1238,c_limit/elon-musk-amber-heard.jpg"
-                alt="baptiste martin" title="Baptiste Martin (le vrai)" width="25%">
+    <section id="home" class="home-main" style="margin-bottom: 100px;">
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div style="width: 49%;">
+                <h1 class="home-title">Baptiste Martin</h1>
+                <h2>THE Elon Musk of development</h2>
+            </div>
+            <div style="width: 49%;">
+                <img src="https://media.vanityfair.fr/photos/65016f3b21bffd22140d50fc/1:1/w_1238,h_1238,c_limit/elon-musk-amber-heard.jpg"
+                alt="baptiste martin" title="Baptiste Martin (le vrai)" style="width: 50%; border-radius: 100%; box-shadow: black 0 0 5px;">
+            </div>
         </div>
     </section>
     <section id="description" class="home-main">
