--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a>Anaïs</a></li>
         <li><a href="sebastien.html">Sébastien</a></li>
         <li><a>Prénom Nom</a></li>
+        <li><a href="ibra.html">Ibrahima</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a>Prénom Nom</a></li>
         <li><a href="page_irek.html">Irek</a></li>
